<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.cards.EditCardActivity"
        android:orientation="vertical">

    <Spinner
            android:id="@+id/spinner_edit_card_original_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:ems="10"
            android:id="@+id/input_edit_card_original"
            android:hint="@string/edit_card_enter_original"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:textSize="24sp"/>

    <Spinner
            android:id="@+id/spinner_edit_card_translation_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:ems="10"
            android:id="@+id/input_edit_card_translation"
            android:hint="@string/edit_card_enter_translation"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:textSize="24sp"/>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom">

        <Button
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/button_edit_card_cancel"
                android:textSize="24sp"/>

        <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/button_edit_card_save"
                android:textSize="24sp"/>
    </RelativeLayout>
</LinearLayout>