<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:focusableInTouchMode="true"
                                             android:id="@+id/card_packs">

    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/content_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/linearLayout">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/input_edit_pack_name"
                android:hint="@string/edit_pack_enter_name"
                android:inputType="text"
                android:gravity="top"
                android:textSize="24sp"/>

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/edit_pack_cards_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/button_edit_pack_select_cards"
                    android:layout_centerVertical="true"
                    android:id="@+id/text_edit_pack_cards_total"
                    android:textSize="24sp"/>

            <Button
                    android:text="@string/select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/button_edit_pack_select_cards"
                    android:textSize="24sp"/>

        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/content_padding"
            android:id="@+id/list_edit_pack_cards"
            android:choiceMode="multipleChoice"
            android:background="@drawable/bordered"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:padding="@dimen/content_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/relativeLayout2">

        <Button
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/button_edit_pack_cancel"
                android:textSize="24sp"/>

        <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/button_edit_pack_save"
                android:textSize="24sp"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>