<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.translate.TranslateActivity"
        android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Spinner
                android:id="@+id/spinner_translate_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                app:srcCompat="@drawable/baseline_swap_horiz_black_18dp"
                android:id="@+id/button_translate_swap_language"
                android:contentDescription="@string/create_card"
                android:focusable="true"
                android:clickable="true"
                android:onClick="onSwapLanguage"/>

        <Spinner
                android:id="@+id/spinner_translate_to"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"/>
    </LinearLayout>

    <EditText
            android:layout_width="match_parent"
            android:ems="10"
            android:id="@+id/input_translate"
            android:hint="@string/enter_here"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:textSize="24sp"
            android:layout_height="120dp"/>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <!--<Button-->
                <!--android:text="F"-->
                <!--android:background="@drawable/round_button"-->
                <!--android:layout_width="30dp"-->
                <!--android:layout_height="30dp"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:id="@+id/filter"/>-->

        <Button
                android:text="@string/translator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/button_translate"
                android:onClick="onTranslate"
                android:textSize="24sp"/>
    </RelativeLayout>

    <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/list_translation_words"/>

</LinearLayout>